--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "with-typescript-styled-components",
+  "name": "stailedsystem",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006 --no-dll",
+    "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
     "next": "latest",
@@ -13,11 +15,18 @@
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/react": "^6.0.28",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "5.0.1",
+    "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "react-is": "^17.0.1",
     "typescript": "4.0"
   },
   "license": "MIT"
