--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "stailedsystem",
+  "name": "stailed-system",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "build:storybook": "build-storybook -c .storybook -o public",
     "start": "next start",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
