--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build && yarn run build:storybook",
     "build:storybook": "build-storybook -c .storybook -o public",
     "start": "next start",
     "storybook": "start-storybook -p 6006 --no-dll",
