--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
-    "build": "next build && yarn run build:storybook",
-    "build:storybook": "build-storybook -c .storybook -o storybook-static",
+    "build": "next build",
+    "build:storybook": "build-storybook -c .storybook -o public",
     "start": "next start",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
