--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "build:storybook": "build-storybook -c .storybook -o public",
     "start": "next start",
     "storybook": "start-storybook -p 6006 --no-dll",
-    "build-storybook": "build-storybook --no-dll"
+    "build-storybook": "build-storybook --no-dll",
+    "generate": "hygen"
   },
   "dependencies": {
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -25,8 +27,10 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "5.0.1",
+    "@types/styled-system": "^5.1.10",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.10.0",
+    "hygen": "^6.0.4",
     "react-is": "^17.0.1",
     "typescript": "4.0"
   },
